--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -15,3 +15,33 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
+/* Highlighter */
+
+::-moz-selection {
+	background-color: rgba(95, 254, 255, 0.2);
+	color: white;
+}
+
+::selection {
+	background-color: rgba(95, 254, 255, 0.2);
+	color: white;
+}
+
+/* Scrollbar */
+
+::-webkit-scrollbar {
+	width: 1rem;
+}
+
+::-webkit-scrollbar-track {
+	background: #424242;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #222526;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #2e3234;
+}
